--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "axios": "^1.6.2",
     "expo": "~49.0.18",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
@@ -26,12 +30,18 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-calendars": "^1.1302.0",
+    "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-elements": "^3.4.3",
+    "react-native-formik": "^1.7.8",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-paper": "^5.11.3",
+    "react-native-reanimated": "~3.3.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "react-native-reanimated": "~3.3.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
